package com.vanaco.recruit.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val NAME_TEXT_FIELD = "NAME_TEXT_FIELD"
    const val JOBTITLE_TEXT_FIELD = "JOBTITLE_TEXT_FIELD"
    const val CONTACT_TEXT_FIELD = "CONTACT_TEXT_FIELD"
    const val CANDIDATE_ITEM = "CANDIDATE_ITEM"

}