...
        modifier = modifier
    ) {
        Row(
            modifier = Modifier.fillMaxWidth()
        ) {
            DefaultRadioButton(
                text = "Name",
                selected = candidateOrder is CandidateOrder.Name,
                onSelect = { onOrderChange(CandidateOrder.Name(candidateOrder.orderType)) }
            )
            Spacer(modifier = Modifier.width(8.dp))

            DefaultRadioButton(
...
                    onOrderChange(candidateOrder.copy(OrderType.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))

            DefaultRadioButton(
                text = "Descending",
                selected = candidateOrder.orderType is OrderType.Descending,
                onSelect = {
                    onOrderChange(candidateOrder.copy(OrderType.Descending))
                }
            )
        }
...
