...
            FloatingActionButton(
                onClick = {
                    viewModel.onEvent(AddEditCandidateEvent.SaveCandidate)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save candidate")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
